fix: wrap very long words on comments

--- a/app/static/css/post.css
+++ b/app/static/css/post.css
@@ -212,6 +212,10 @@
     color: gray;
 }
 
+.comment-content {
+    overflow-wrap: break-word;
+}
+
 .comment-footer {
     display: flex;
     flex-direction: row;
